# CplusplusQT

./: .gitignore  CMakeLists.txt  README.md  RELEASE_GUIDE.md  build_release.bat  config.ini  package_release.bat  test_release.bat  tmp_original.cpp
docs/: OPTIMIZATION_COMPLETE.md  OPTIMIZATION_SUMMARY.md  PROJECT_OPTIMIZATION_GUIDE.md  PROJECT_STRUCTURE_OPTIMIZATION.md  PROJECT_SUMMARY.md  PROJECT_SUMMARY_OPTIMIZED.md  QUICK_START.md  README.md  STRUCTURE_OPTIMIZATION_SUMMARY.md
include/: AppConfig.h  DicomUtils.h  InferenceEngine.h  MainWindow.h
resources/: resources.qrc
resources/styles/: light.qss  modern_light.qss
scripts/deploy/: installer.nsi
scripts/maintenance/tools/: encrypt_model.cpp
src/: DicomUtils.h  ImageView.cpp  ImageView.h  InferenceEngine.cpp  InferenceEngine.h  MainWindow.cpp  MainWindow.h  MetaTable.cpp  ModelManager.cpp  ModelManager.h  TaskSelectionDialog.cpp  TaskSelectionDialog.h  main.cpp
src/ai/: InferenceEngine.cpp  InferenceEngine.h
src/core/: AppConfig.cpp  AppConfig.h  ErrorHandler.cpp  ErrorHandler.h  main.cpp
src/medical/: DicomUtils.cpp  DicomUtils.h
src/ui/: ImageView.cpp  ImageView.h  MainWindow.cpp  MainWindow.h  MetaTable.h
tools/: encrypt_model.cpp
